# AutoDev-Platform

./: .gitignore  07-Local-Backend-Data-Chain-v0.1.md  2323.md  AGENTS.md  README.md  demo.html  langgraph.json  nohup.out
core/ai-worker/: README.md  pyproject.toml
core/ai-worker/autodev_ai/: __init__.py  config.py  json_tools.py  llm.py  main.py  models.py  prompt_registry.py  prompts.py  retry.py  studio.py  text_tools.py  tracing.py  workflow.py
core/ai-worker/autodev_ai/graphs/: chat.py  coding.py  coding_providers.py  development.py  prd.py  report.py  stage.py
core/ai-worker/autodev_ai/graphs/workflow/: __init__.py  graph.py  helpers.py  nodes.py  routing.py
core/ai-worker/autodev_ai/prompts/: __init__.py  chat.py  coding.py  common.py  development.py  prd.py  registration.py  report.py  review.py  stage.py
core/ai-worker/autodev_ai/workflow_runtime/: __init__.py  events.py  progress.py  projection.py  schema.py  service.py  types.py
core/ai-worker/autodev_ai_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/ai-worker/tests/: __init__.py  test_api_routes.py  test_chat.py  test_coding.py  test_config.py  test_dev_normalizer.py  test_graphs.py  test_llm.py  test_models.py  test_prd_normalizer.py  test_prompt_package_structure.py  test_prompts.py  test_studio.py  test_tools.py  test_tracing.py  test_workflow.py
core/daemon/: Cargo.toml
core/daemon/src/: logger.rs  main.rs  runtime.rs  server.rs  store.rs
core/daemon/src/protocol/: constants.rs  envelope.rs  mod.rs  time.rs
core/daemon/src/router/: dispatch_query.rs  mod.rs  payload.rs
core/daemon/src/store/: lifecycle.rs  schema.rs
core/daemon/src/store/helpers/: file.rs  (+5 more)
(+258 files in other folders)
