[project]
name = "autodev-ai-worker"
version = "0.1.0"
description = "AI Agent worker for AutoDev platform — LangGraph + FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.3",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
