[project]
name = "autodev-ai-worker"
version = "0.1.0"
description = "AI Agent worker for AutoDev platform — LangGraph + FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.3",
    "langgraph-checkpoint-sqlite>=3.1",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "langgraph-cli[inmem]==0.4.29",
    "langgraph-api==0.10.0",
    "langgraph-runtime-inmem==0.30.0",
]

[tool.ruff]
line-length = 100
