[package]
name = "autodev-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4"] }
ureq = { version = "2.10", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
